docs: updated app url

--- a/.github/workflows/cicd-cloud-run.yml
+++ b/.github/workflows/cicd-cloud-run.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: production
-      url: foo.com
+      url: https://project-dashboard-client-3i2mtbjusq-ew.a.run.app
     steps:
       - name: Checkout
         uses: actions/checkout@v2
