--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,13 @@
              index  index.html index.htm;
              try_files $uri /index.html;
          }
+         
+         location /api {
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass https://python-flask-gcp-3i2mtbjusq-ew.a.run.app:8080$request_uri;
+        }
 
          gzip on;
          gzip_vary on;
