fix: add resolver to nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,12 @@
          }
          
          location /api {
+            proxy_ssl_server_name on;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass https://python-flask-gcp-3i2mtbjusq-ew.a.run.app:8080$request_uri;
+            resolver 8.8.8.8;
+            proxy_pass https://python-flask-gcp-3i2mtbjusq-ew.a.run.app$request_uri;
         }
 
          gzip on;
