fix: updated package json app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-serverless-gcp-terraform",
+  "name": "project-dashboard",
   "version": "1.0.0",
   "private": true,
   "eslintConfig": {
