--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.0.6",
     "axios": "^0.23.0",
     "d3": "^7.2.1",
+    "d3-scale-chromatic": "^3.0.0",
     "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -55,6 +56,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "@types/d3": "^7.1.0",
     "@types/jest": "^26.0.23",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^15.0.2",
