feat: added k8 nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,8 @@
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            resolver 8.8.8.8;
-            proxy_pass https://python-flask-gcp-3i2mtbjusq-ew.a.run.app$request_uri;
+            resolver kube-dns.kube-system.svc.cluster.local valid=10s;
+            proxy_pass http://app-api-cluster-ip-service.project-dashboard.svc.cluster.local:8080$request_uri;
         }
 
          gzip on;
