--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
@@ -62,6 +63,7 @@
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
