--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3": "^7.2.1",
     "d3-scale-chromatic": "^3.0.0",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
