ci-fix: updated gcloud plugin

--- a/.github/workflows/cicd-cloud-run.yml
+++ b/.github/workflows/cicd-cloud-run.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: open-source-apps-001
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
